<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="scheduleDTO"
            type="com.example.irelandtrainapp.dtos.StationScheduleDTO" />

        <import type="android.view.View" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:elevation="4dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/textViewCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{scheduleDTO.trainCode}"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLocationType"
                tools:text="A911" />

            <TextView
                android:id="@+id/textViewType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{scheduleDTO.trainType}"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textViewCode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewCode"
                tools:text="DD/90" />

            <TextView
                android:id="@+id/textViewOriginLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/origin_label"
                android:textSize="10sp"
                app:layout_constraintStart_toEndOf="@+id/textViewLocationType"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewOriginLabel2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_location_label"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="@+id/textViewOriginLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewDestination" />

            <TextView
                android:id="@+id/textViewOriginTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@{scheduleDTO.originTime}"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/textViewOrigin"
                app:layout_constraintStart_toStartOf="@+id/textViewOriginLabel"
                tools:text="10:00" />

            <TextView
                android:id="@+id/textViewOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{scheduleDTO.origin}"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                app:layout_constraintStart_toStartOf="@+id/textViewOriginLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewOriginLabel"
                tools:text="from" />

            <TextView
                android:id="@+id/textViewDestinationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination_label"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="@+id/textViewOriginLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewOrigin" />

            <TextView
                android:id="@+id/textViewDestinationTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:text="@{scheduleDTO.destinationTime}"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewDestinationLabel"
                app:layout_constraintStart_toStartOf="@+id/textViewDestinationLabel"
                tools:text="13:00" />

            <TextView
                android:id="@+id/textViewDestination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{scheduleDTO.destination}"
                android:textColor="@color/colorBlack"
                app:layout_constraintStart_toStartOf="@+id/textViewDestinationLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewDestinationLabel"
                tools:text="to" />


            <TextView
                android:id="@+id/textViewStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{scheduleDTO.status}"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:visibility="@{scheduleDTO.status.equals(`No Information`) ? View.GONE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="status" />

            <TextView
                android:id="@+id/textViewLastLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{scheduleDTO.lastLocation}"
                android:textColor="@color/colorBlack"
                app:layout_constraintStart_toStartOf="@+id/textViewOriginLabel2"
                app:layout_constraintTop_toBottomOf="@+id/textViewOriginLabel2"
                tools:text="last location" />

            <LinearLayout
                android:id="@+id/layoutDueTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="@{scheduleDTO.due.equals(`0`) ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toTopOf="@+id/layoutLateTime"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/due_label"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@{scheduleDTO.due}"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{scheduleDTO.late.equals(`1`) ? `minute` : `minutes`}"
                    android:textSize="12sp"
                    tools:text="minutes" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutLateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal"
                android:visibility="@{scheduleDTO.late.equals(`0`) ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/textViewLateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@{scheduleDTO.delayMinutes}"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    tools:text="2" />

                <TextView
                    android:id="@+id/textViewLateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{scheduleDTO.delayText }"
                    android:textSize="12sp"
                    tools:text="minutes late" />
            </LinearLayout>

            <ImageView
                android:id="@+id/textViewLocationType"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@{scheduleDTO.locationImage}"
                app:layout_constraintEnd_toEndOf="@+id/textViewCode"
                app:layout_constraintStart_toStartOf="@+id/textViewCode"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_origin" />

            <TextView
                android:id="@+id/textViewDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{scheduleDTO.direction}"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewStatus"
                tools:text="direction" />

            <TextView
                android:id="@+id/textViewArriveLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/arrive_label"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:visibility="@{scheduleDTO.hasArrivalTimes() ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toStartOf="@+id/textViewDepartLabel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewDivider" />

            <TextView
                android:id="@+id/textViewSchArriveLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/scheduled_label"
                android:textSize="8sp"
                android:visibility="@{scheduleDTO.scheduledArrival.length() > 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toStartOf="@+id/textViewExpArriveLabel"
                app:layout_constraintStart_toStartOf="@+id/textViewArriveLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewArriveLabel" />

            <TextView
                android:id="@+id/textViewSchArrive"
                android:layout_width="36dp"
                android:layout_height="18dp"
                android:text="@{scheduleDTO.schArrival}"
                android:textColor="@color/colorBlack"
                android:visibility="@{scheduleDTO.scheduledArrival.length() > 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="@+id/textViewSchArriveLabel"
                app:layout_constraintStart_toStartOf="@+id/textViewSchArriveLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewSchArriveLabel"
                tools:text="14:20" />

            <TextView
                android:id="@+id/textViewExpArriveLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expected_label"
                android:textSize="8sp"
                android:visibility="@{scheduleDTO.expectedArrival.length() > 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="@+id/textViewArriveLabel"
                app:layout_constraintStart_toEndOf="@id/textViewSchArriveLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewArriveLabel" />

            <TextView
                android:id="@+id/textViewExpArrive"
                android:layout_width="36dp"
                android:layout_height="18dp"
                android:text="@{scheduleDTO.expArrival}"
                android:textColor="@color/colorBlack"
                android:visibility="@{scheduleDTO.expectedArrival.length() > 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="@+id/textViewExpArriveLabel"
                app:layout_constraintStart_toStartOf="@+id/textViewExpArriveLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewExpArriveLabel"
                tools:text="14:23" />


            <TextView
                android:id="@+id/textViewDepartLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/depart_label"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack"
                android:textSize="12sp"
                android:visibility="@{scheduleDTO.hasDepartureTimes() ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toStartOf="@+id/layoutDueTime"
                app:layout_constraintStart_toEndOf="@id/textViewArriveLabel"
                app:layout_constraintTop_toTopOf="@+id/textViewArriveLabel" />

            <TextView
                android:id="@+id/textViewSchDepartLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/scheduled_label"
                android:textSize="8sp"
                android:visibility="@{scheduleDTO.scheduledDeparture.length() > 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toStartOf="@+id/textViewExpDepartLabel"
                app:layout_constraintStart_toStartOf="@+id/textViewDepartLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewDepartLabel" />

            <TextView
                android:id="@+id/textViewExpDepartLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/expected_label"
                android:textSize="8sp"
                android:visibility="@{scheduleDTO.expectedDeparture.length() > 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="@+id/textViewDepartLabel"
                app:layout_constraintStart_toEndOf="@+id/textViewSchDepartLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewDepartLabel" />

            <TextView
                android:id="@+id/textViewExpDepart"
                android:layout_width="36dp"
                android:layout_height="18dp"
                android:text="@{scheduleDTO.expectedDeparture}"
                android:textColor="@color/colorBlack"
                android:visibility="@{scheduleDTO.expectedDeparture.length() > 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="@+id/textViewExpDepartLabel"
                app:layout_constraintStart_toStartOf="@+id/textViewExpDepartLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewExpDepartLabel"
                tools:text="14:24" />

            <TextView
                android:id="@+id/textViewSchDepart"
                android:layout_width="36dp"
                android:layout_height="18dp"
                android:text="@{scheduleDTO.scheduledDeparture}"
                android:textColor="@color/colorBlack"
                android:visibility="@{scheduleDTO.scheduledDeparture.length() > 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="@+id/textViewSchDepartLabel"
                app:layout_constraintStart_toStartOf="@+id/textViewSchDepartLabel"
                app:layout_constraintTop_toBottomOf="@+id/textViewSchDepartLabel"
                tools:text="14:21" />

            <View
                android:id="@+id/viewDivider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorGrey"
                app:layout_constraintTop_toBottomOf="@+id/textViewLastLocation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>